[package]
name = "migration"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["rt", "macros"] }

[dependencies.sea-orm-migration]
version = "0.12"
features = [
  "sqlx-mysql",
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "with-json",
  "with-time",
  "with-uuid",
]
